# XMLB

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  Main.cpp  README.md  Tests Tools.sln  Tests Tools.vcxproj  Tests Tools.vcxproj.filters  XMLB.sln  XMLB.vcxproj  XMLB.vcxproj.filters
doc/: index.html  mainpage.hpp
docs/: XMLB__Code__converter_8h_source.html  XMLB__Diagnostic__iterator_8h_source.html  XMLB__Parser__data__controller_8h_source.html  annotated.html  classXMLB_1_1Document.html  classXMLB_1_1Node-members.html  classXMLB_1_1detail_1_1Attribute__name__state-members.html  classXMLB_1_1detail_1_1Attribute__value__state.html  classXMLB_1_1detail_1_1Base__state-members.html  classXMLB_1_1detail_1_1Document__info__state.html  classXMLB_1_1detail_1_1Error__state-members.html  classXMLB_1_1detail_1_1Name__tag__state.html  classXMLB_1_1detail_1_1Node__const__iterator.html  classXMLB_1_1detail_1_1Node__iterator-members.html  classXMLB_1_1detail_1_1Parser.html  classXMLB_1_1detail_1_1Parser__data__controller-members.html  classXMLB_1_1detail_1_1Value__tag__state-members.html  classes.html  dir_b8262a955706dfdf31cd9c7165f049ee.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  dir_f4e7184f22f0c187cf686d0aca16ae54.html  files.html  group__general.html  group__secondary.html  mainpage_8hpp_source.html  menudata.js  structXMLB_1_1detail_1_1Attribute__name__functor-members.html  structXMLB_1_1detail_1_1Attribute__name__functor.html  structXMLB_1_1detail_1_1Attribute__value__functor-members.html  (+13 more)
include/: XMLB.h  XMLB_Node.h  (+6 more)
(+168 files in other folders)
